--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -24,10 +24,10 @@ jobs:
         with:
           terraform_version: 1.0.1
       - name: Download Go Modules
-        working-directory: ./IaaC/test
+        working-directory: ./test
         run: go mod download
       - name: Run Go Tests
-        working-directory: ./IaaC/test
+        working-directory: ./test
         run: |
           go test -v
 
