--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -37,7 +37,7 @@ jobs:
 
   terraform:
     name: "Terraform"
-    needs: test
+    needs: go-tests
     env:
       ARM_CLIENT_ID: ${{ secrets.AZURE_AD_CLIENT_ID }}
       ARM_CLIENT_SECRET: ${{ secrets.AZURE_AD_CLIENT_SECRET }}
